--- a/Source/CoverageConverter.csproj
+++ b/Source/CoverageConverter.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2A9FEBAA-15AD-4445-9BEC-6F5BE11D658E}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Toneri</RootNamespace>
     <AssemblyName>CoverageConverter</AssemblyName>
